add color
