# pkg/api/services.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "pkg/api/users.proto",
+    "title": "pkg/api/services.proto",
     "version": "version not set"
   },
   "tags": [
@@ -126,21 +126,96 @@
           }
         ]
       }
+    },
+    "/manager/api/v1/me/device-token": {
+      "post": {
+        "operationId": "Users_UpdateDeviceToken",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiUpdateDeviceTokenResponse"
+            }
+          },
+          "401": {
+            "description": "You have provided no authorization token or the token provided is invalid.",
+            "schema": {}
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiUpdateDeviceTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Users"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/manager/api/v1/search": {
+      "post": {
+        "operationId": "Users_SearchUser",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiSearchUserResponse"
+            }
+          },
+          "401": {
+            "description": "You have provided no authorization token or the token provided is invalid.",
+            "schema": {}
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiSearchUserRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Users"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
     }
   },
   "definitions": {
     "apiGetMeResponse": {
       "type": "object",
       "properties": {
-        "userId": {
-          "type": "string"
-        },
-        "nickname": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
+        "user": {
+          "$ref": "#/definitions/apiUser"
         }
       }
     },
@@ -150,38 +225,98 @@
     "apiLoginResponse": {
       "type": "object",
       "properties": {
-        "userId": {
-          "type": "string"
-        },
-        "nickname": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
+        "user": {
+          "$ref": "#/definitions/apiUser"
         }
       }
+    },
+    "apiPlayerColor": {
+      "type": "string",
+      "enum": [
+        "BLUE",
+        "RED",
+        "YELLOW",
+        "GREEN",
+        "BLACK",
+        "PURPLE",
+        "ORANGE",
+        "PINK",
+        "NEUTRAL",
+        "BRONZE"
+      ],
+      "default": "BLUE"
+    },
+    "apiSearchUserRequest": {
+      "type": "object",
+      "properties": {
+        "search": {
+          "type": "string"
+        }
+      }
+    },
+    "apiSearchUserResponse": {
+      "type": "object",
+      "properties": {
+        "users": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/apiUserSettings"
+          }
+        }
+      }
+    },
+    "apiUpdateDeviceTokenRequest": {
+      "type": "object",
+      "properties": {
+        "deviceToken": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
+    "apiUpdateDeviceTokenResponse": {
+      "type": "object"
     },
     "apiUpdateMeRequest": {
       "type": "object",
       "properties": {
-        "nickname": {
-          "type": "string"
+        "settings": {
+          "$ref": "#/definitions/apiUserSettings"
         }
       }
     },
     "apiUpdateMeResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "user": {
+          "$ref": "#/definitions/apiUser"
+        }
+      }
+    },
+    "apiUser": {
+      "type": "object",
+      "properties": {
+        "id": {
           "type": "string"
         },
-        "nickname": {
-          "type": "string"
+        "settings": {
+          "$ref": "#/definitions/apiUserSettings"
         },
         "createdAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "apiUserSettings": {
+      "type": "object",
+      "properties": {
+        "nickname": {
+          "type": "string"
+        },
+        "color": {
+          "$ref": "#/definitions/apiPlayerColor"
         }
       }
     },
