# pkg/api/user.pb.go
@@ -1,0 +1,328 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.2
+// 	protoc        v5.27.2
+// source: pkg/api/user.proto
+
+package api
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type PlayerColor int32
+
+const (
+	PlayerColor_BLUE    PlayerColor = 0
+	PlayerColor_RED     PlayerColor = 1
+	PlayerColor_YELLOW  PlayerColor = 2
+	PlayerColor_GREEN   PlayerColor = 3
+	PlayerColor_BLACK   PlayerColor = 4
+	PlayerColor_PURPLE  PlayerColor = 5
+	PlayerColor_ORANGE  PlayerColor = 6
+	PlayerColor_PINK    PlayerColor = 7
+	PlayerColor_NEUTRAL PlayerColor = 8
+	PlayerColor_BRONZE  PlayerColor = 9
+)
+
+// Enum value maps for PlayerColor.
+var (
+	PlayerColor_name = map[int32]string{
+		0: "BLUE",
+		1: "RED",
+		2: "YELLOW",
+		3: "GREEN",
+		4: "BLACK",
+		5: "PURPLE",
+		6: "ORANGE",
+		7: "PINK",
+		8: "NEUTRAL",
+		9: "BRONZE",
+	}
+	PlayerColor_value = map[string]int32{
+		"BLUE":    0,
+		"RED":     1,
+		"YELLOW":  2,
+		"GREEN":   3,
+		"BLACK":   4,
+		"PURPLE":  5,
+		"ORANGE":  6,
+		"PINK":    7,
+		"NEUTRAL": 8,
+		"BRONZE":  9,
+	}
+)
+
+func (x PlayerColor) Enum() *PlayerColor {
+	p := new(PlayerColor)
+	*p = x
+	return p
+}
+
+func (x PlayerColor) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (PlayerColor) Descriptor() protoreflect.EnumDescriptor {
+	return file_pkg_api_user_proto_enumTypes[0].Descriptor()
+}
+
+func (PlayerColor) Type() protoreflect.EnumType {
+	return &file_pkg_api_user_proto_enumTypes[0]
+}
+
+func (x PlayerColor) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use PlayerColor.Descriptor instead.
+func (PlayerColor) EnumDescriptor() ([]byte, []int) {
+	return file_pkg_api_user_proto_rawDescGZIP(), []int{0}
+}
+
+type UserSettings struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Nickname string      `protobuf:"bytes,1,opt,name=nickname,proto3" json:"nickname,omitempty"`
+	Color    PlayerColor `protobuf:"varint,2,opt,name=color,proto3,enum=api.PlayerColor" json:"color,omitempty"`
+}
+
+func (x *UserSettings) Reset() {
+	*x = UserSettings{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_pkg_api_user_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *UserSettings) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UserSettings) ProtoMessage() {}
+
+func (x *UserSettings) ProtoReflect() protoreflect.Message {
+	mi := &file_pkg_api_user_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UserSettings.ProtoReflect.Descriptor instead.
+func (*UserSettings) Descriptor() ([]byte, []int) {
+	return file_pkg_api_user_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *UserSettings) GetNickname() string {
+	if x != nil {
+		return x.Nickname
+	}
+	return ""
+}
+
+func (x *UserSettings) GetColor() PlayerColor {
+	if x != nil {
+		return x.Color
+	}
+	return PlayerColor_BLUE
+}
+
+type User struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id        string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	Settings  *UserSettings          `protobuf:"bytes,2,opt,name=settings,proto3" json:"settings,omitempty"`
+	CreatedAt *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
+}
+
+func (x *User) Reset() {
+	*x = User{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_pkg_api_user_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *User) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*User) ProtoMessage() {}
+
+func (x *User) ProtoReflect() protoreflect.Message {
+	mi := &file_pkg_api_user_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use User.ProtoReflect.Descriptor instead.
+func (*User) Descriptor() ([]byte, []int) {
+	return file_pkg_api_user_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *User) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *User) GetSettings() *UserSettings {
+	if x != nil {
+		return x.Settings
+	}
+	return nil
+}
+
+func (x *User) GetCreatedAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.CreatedAt
+	}
+	return nil
+}
+
+var File_pkg_api_user_proto protoreflect.FileDescriptor
+
+var file_pkg_api_user_proto_rawDesc = []byte{
+	0x0a, 0x12, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x12, 0x03, 0x61, 0x70, 0x69, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73,
+	0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x52, 0x0a, 0x0c, 0x55, 0x73,
+	0x65, 0x72, 0x53, 0x65, 0x74, 0x74, 0x69, 0x6e, 0x67, 0x73, 0x12, 0x1a, 0x0a, 0x08, 0x6e, 0x69,
+	0x63, 0x6b, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x6e, 0x69,
+	0x63, 0x6b, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x26, 0x0a, 0x05, 0x63, 0x6f, 0x6c, 0x6f, 0x72, 0x18,
+	0x02, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x10, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x50, 0x6c, 0x61, 0x79,
+	0x65, 0x72, 0x43, 0x6f, 0x6c, 0x6f, 0x72, 0x52, 0x05, 0x63, 0x6f, 0x6c, 0x6f, 0x72, 0x22, 0x80,
+	0x01, 0x0a, 0x04, 0x55, 0x73, 0x65, 0x72, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x2d, 0x0a, 0x08, 0x73, 0x65, 0x74, 0x74, 0x69,
+	0x6e, 0x67, 0x73, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x55, 0x73, 0x65, 0x72, 0x53, 0x65, 0x74, 0x74, 0x69, 0x6e, 0x67, 0x73, 0x52, 0x08, 0x73, 0x65,
+	0x74, 0x74, 0x69, 0x6e, 0x67, 0x73, 0x12, 0x39, 0x0a, 0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x64, 0x5f, 0x61, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d,
+	0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x41,
+	0x74, 0x2a, 0x7d, 0x0a, 0x0b, 0x50, 0x6c, 0x61, 0x79, 0x65, 0x72, 0x43, 0x6f, 0x6c, 0x6f, 0x72,
+	0x12, 0x08, 0x0a, 0x04, 0x42, 0x4c, 0x55, 0x45, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x52, 0x45,
+	0x44, 0x10, 0x01, 0x12, 0x0a, 0x0a, 0x06, 0x59, 0x45, 0x4c, 0x4c, 0x4f, 0x57, 0x10, 0x02, 0x12,
+	0x09, 0x0a, 0x05, 0x47, 0x52, 0x45, 0x45, 0x4e, 0x10, 0x03, 0x12, 0x09, 0x0a, 0x05, 0x42, 0x4c,
+	0x41, 0x43, 0x4b, 0x10, 0x04, 0x12, 0x0a, 0x0a, 0x06, 0x50, 0x55, 0x52, 0x50, 0x4c, 0x45, 0x10,
+	0x05, 0x12, 0x0a, 0x0a, 0x06, 0x4f, 0x52, 0x41, 0x4e, 0x47, 0x45, 0x10, 0x06, 0x12, 0x08, 0x0a,
+	0x04, 0x50, 0x49, 0x4e, 0x4b, 0x10, 0x07, 0x12, 0x0b, 0x0a, 0x07, 0x4e, 0x45, 0x55, 0x54, 0x52,
+	0x41, 0x4c, 0x10, 0x08, 0x12, 0x0a, 0x0a, 0x06, 0x42, 0x52, 0x4f, 0x4e, 0x5a, 0x45, 0x10, 0x09,
+	0x42, 0x39, 0x5a, 0x37, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63,
+	0x68, 0x65, 0x73, 0x74, 0x6e, 0x75, 0x74, 0x34, 0x32, 0x2f, 0x74, 0x65, 0x72, 0x72, 0x61, 0x66,
+	0x6f, 0x72, 0x6d, 0x69, 0x6e, 0x67, 0x2d, 0x6d, 0x61, 0x72, 0x73, 0x2d, 0x6d, 0x61, 0x6e, 0x61,
+	0x67, 0x65, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x33,
+}
+
+var (
+	file_pkg_api_user_proto_rawDescOnce sync.Once
+	file_pkg_api_user_proto_rawDescData = file_pkg_api_user_proto_rawDesc
+)
+
+func file_pkg_api_user_proto_rawDescGZIP() []byte {
+	file_pkg_api_user_proto_rawDescOnce.Do(func() {
+		file_pkg_api_user_proto_rawDescData = protoimpl.X.CompressGZIP(file_pkg_api_user_proto_rawDescData)
+	})
+	return file_pkg_api_user_proto_rawDescData
+}
+
+var file_pkg_api_user_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_pkg_api_user_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_pkg_api_user_proto_goTypes = []any{
+	(PlayerColor)(0),              // 0: api.PlayerColor
+	(*UserSettings)(nil),          // 1: api.UserSettings
+	(*User)(nil),                  // 2: api.User
+	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
+}
+var file_pkg_api_user_proto_depIdxs = []int32{
+	0, // 0: api.UserSettings.color:type_name -> api.PlayerColor
+	1, // 1: api.User.settings:type_name -> api.UserSettings
+	3, // 2: api.User.created_at:type_name -> google.protobuf.Timestamp
+	3, // [3:3] is the sub-list for method output_type
+	3, // [3:3] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
+}
+
+func init() { file_pkg_api_user_proto_init() }
+func file_pkg_api_user_proto_init() {
+	if File_pkg_api_user_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_pkg_api_user_proto_msgTypes[0].Exporter = func(v any, i int) any {
+			switch v := v.(*UserSettings); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_pkg_api_user_proto_msgTypes[1].Exporter = func(v any, i int) any {
+			switch v := v.(*User); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_pkg_api_user_proto_rawDesc,
+			NumEnums:      1,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_pkg_api_user_proto_goTypes,
+		DependencyIndexes: file_pkg_api_user_proto_depIdxs,
+		EnumInfos:         file_pkg_api_user_proto_enumTypes,
+		MessageInfos:      file_pkg_api_user_proto_msgTypes,
+	}.Build()
+	File_pkg_api_user_proto = out.File
+	file_pkg_api_user_proto_rawDesc = nil
+	file_pkg_api_user_proto_goTypes = nil
+	file_pkg_api_user_proto_depIdxs = nil
+}
